Exclude more CSS properties for fullscreen video on Android.

This CL overrides additional CSS properties that prevent accelerated overlays from being used:
  - -webkit-filter
  - opacity
  - border-radius
  - mix-blend-mode

And two that are rendered incorrectly:
  - background-image
  - border

This is especially important because there is no non-overlay fallback.

This mechanism is expected to be replaced by compositor changes in M53.

BUG=618753

Review-Url: https://codereview.chromium.org/2055023002
Cr-Commit-Position: refs/heads/master@{#401923}

Former-commit-id: f33109c4d3bdafe0a0c07c59bd1bf1639595dc8a